# roadmap_engine

./: .dockerignore  Dockerfile  README.md  pyproject.toml  roadmapengine.md
data/processed/diffs/backend/: abc1234__to__70ecc31a04739d547d6ebf37213249b275f7565b.json  fake_hash__to__70ecc31a04739d547d6ebf37213249b275f7565b.json
data/processed/roadmaps/typescript/: latest.json
scripts/: dump_narrations.py  print_table.py
src/roadmap_engine/: config.py  diff_engine.py  embedder.py  engine.py  llm.py  main.py  parser.py  runner.py  schemas.py  staleness.py  validator.py
streamlit_app/: app.py
tests/: test_api.py  test_groq.py  test_llm.py  test_staleness.py
