[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roadmap_engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "pydantic-settings>=2.14.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.1",
    "uvicorn>=0.51.0",
]
